<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_teleop</name>
  <version>0.0.0</version>
  <description>Robot Arm Teleop</description>
  <maintainer email="tylerjw@gmail.com">Tyler Weaver</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>

<!--   <depend>moveit</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_eigen</depend>
  <depend>trajectory_msgs</depend>

  <exec_depend>gripper_controllers</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>tf2_ros</exec_depend> -->

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
